# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "dependent_int_types"
version = "0.1.0"
edition = "2021"

[lib]
name = "depint"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
codespan-reporting = "0.11"
logos = "0.12"

[profile.release]
lto = "fat"
